Fix npm run serve script

--- a/template/package.json
+++ b/template/package.json
@@ -7,7 +7,7 @@
     "test": "NODE_ENV=test jest",
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
     "build": "preact build --no-prerender --clean --template src/index.ejs --service-worker false",
-    "serve": "preact build && preact serve",
+    "serve": "npm run build && preact serve",
     "dev": "preact watch --template src/index.ejs"
   },
   "keywords": [],
