--- a/template/package.json
+++ b/template/package.json
@@ -2,13 +2,17 @@
   "name": "widgets-template",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "umd:main": "dist/index.umd.js",
+  "module": "dist/index.m.js",
+  "source": "components/hello-world/index.js",
   "scripts": {
     "test": "NODE_ENV=test jest",
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
     "build": "preact build --no-prerender --clean --template src/index.ejs --service-worker false",
     "serve": "npm run build && preact serve",
-    "dev": "preact watch --template src/index.ejs"
+    "dev": "preact watch --template src/index.ejs",
+    "dist": "microbundle --entry src/components/hello-world/index.js"
   },
   "keywords": [],
   "author": "Zouhir <zouhir@zouhir.org>",
@@ -18,6 +22,7 @@
     "identity-obj-proxy": "^3.0.0",
     "if-env": "^1.0.0",
     "jest": "^21.2.1",
+    "microbundle": "^0.6.0",
     "node-sass": "^4.5.3",
     "preact-cli": "^2.0.2",
     "preact-render-to-string": "^3.7.0",
