--- a/template/package.json
+++ b/template/package.json
@@ -33,6 +33,7 @@
     "preact": "^8.2.5",
     "preact-compat": "^3.17.0",
     "preact-habitat": "^3.1.0",
+    "preact-render-to-string": "^4.1.0",
     "preact-router": "^2.5.7"
   },
   "jest": {
