--- a/template/package.json
+++ b/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "widgets-template",
+  "name": "{{ name }}",
   "version": "0.1.0",
   "description": "",
   "source": "components/hello-world/index.js",
