--- a/template/package.json
+++ b/template/package.json
@@ -2,48 +2,46 @@
   "name": "{{ name }}",
   "version": "0.1.0",
   "description": "",
-  "source": "components/hello-world/index.js",
+  "source": "src/index.js",
   "main": "dist/index.js",
   "module": "dist/index.module.js",
   "umd:main": "dist/index.umd.js",
   "scripts": {
-    "build": "preact build --no-prerender --template src/template.html --no-sw",
-    "dist": "microbundle --entry src/components/hello-world/index.js",
-    "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch --template src/template.html",
-    "lint": "eslint src",
+    "dev": "preact watch --src demo --template demo/template.html",
+    "build": "microbundle build",
+    "lint": "eslint '{demo,src,test}/**/*.js'",
     "test": "jest"
   },
+  "files": [
+    "dist"
+  ],
   "eslintConfig": {
     "extends": "preact",
     "ignorePatterns": [
       "build/"
     ]
   },
-  "keywords": [],
   "author": "Zouhir <zouhir@zouhir.org>",
   "license": "MIT",
+  "dependencies": {
+    "preact": "^10.5.7"
+  },
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-preact-pure": "^2.2.3",
     "eslint": "^6.8.0",
-    "eslint-config-preact": "^1.1.0",
+    "eslint-config-preact": "^1.1.3",
     "jest": "^26.3.0",
     "jest-preset-preact": "^4.0.2",
-    "microbundle": "^0.12.3",
-    "preact-cli": "^3.0.1",
-    "sirv-cli": "1.0.3"
-  },
-  "dependencies": {
-    "preact": "^10.4.7",
+    "microbundle": "^0.13.0",
+    "preact-cli": "^3.0.5",
     "preact-habitat": "^3.3.0",
-    "preact-render-to-string": "^5.1.10",
-    "preact-router": "^3.2.1"
+    "preact-render-to-string": "^5.1.12"
   },
   "jest": {
     "preset": "jest-preset-preact",
     "setupFiles": [
-      "<rootDir>/src/tests/__mocks__/setupTests.js"
+      "<rootDir>/tests/__mocks__/setupTests.js"
     ]
   }
 }
