--- a/template/package.json
+++ b/template/package.json
@@ -7,7 +7,7 @@
   "module": "dist/index.module.js",
   "umd:main": "dist/index.umd.js",
   "scripts": {
-    "dev": "preact watch --template src/template.html",
+    "dev": "preact watch",
     "build:widget": "microbundle build",
     "build:lib": "microbundle build -i src/component.js",
     "lint": "eslint '{src,test}/**/*.js'",
@@ -29,12 +29,12 @@
   },
   "devDependencies": {
     "enzyme": "^3.11.0",
-    "enzyme-adapter-preact-pure": "^2.2.3",
-    "eslint": "^6.8.0",
+    "enzyme-adapter-preact-pure": "^3.3.0",
+    "eslint": "^7.32.0",
     "eslint-config-preact": "^1.1.3",
     "jest": "^26.3.0",
     "jest-preset-preact": "^4.0.2",
-    "microbundle": "^0.13.0",
+    "microbundle": "^0.14.1",
     "preact": "^10.5.7",
     "preact-cli": "^3.0.5",
     "preact-habitat": "^3.3.0",
